# agroai_crops-agent-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  debug_metadata.py  migrations.py  pyproject.toml  run.py  test_migration_imports.py  test_vectorized.py  wsgi.py
.cursor/: settings.json
.cursor/rules/: architechture-rules.mdc  form-style-rule.mdc  langchain-rules.mdc  project-rules.mdc  ui-rules.mdc  wait-rules.mdc
src/: __init__.py
src/api/: __init__.py
src/api/farm_management/: __init__.py  account_router.py  crop_cycle_router.py  crop_master_router.py  field_router.py  report_campaign_router.py
src/api/routes/: analyze_router.py  auth_router.py  chat_router.py  reports_router.py  upload_router.py  user_router.py  weather_data_router.py  weather_zones.py
src/api/schemas/: __init__.py  image_analysis_request.py  upload_schemas.py
src/app/: container.py  database.py  timeseries.py
src/app/agent/: container.py  tools.py
src/app/agent/infrastructure/: agent_repository_interface.py  langchain_agent_repository.py
src/app/agent/service/: agent_service.py
src/app/analysis/: __init__.py  container.py
src/app/analysis/domain/: __init__.py  models.py  parsers.py
src/app/analysis/domain/dto/: __init__.py  crop_report.py  segmentation_result.py
src/app/analysis/infrastructure/captioner/: blip2_captioner_repository.py  blip_container_repository.py  captioner_repository.py  mock_captioner_repostitory.py
src/app/analysis/infrastructure/llm_reasoning/: mistral_reasoning_repository.py  mock_reasoning_repository.py  reasoning_repository.py
src/app/analysis/infrastructure/segmenter/: mock_segmenter_repository.py  segmenter_repository.py  unet_segmenter_repository.py
src/app/analysis/service/: __init__.py  captioner.py  reasoning.py  segmenter.py
src/app/auth/: container.py
src/app/auth/domain/schemas/: auth_schema.py
src/app/auth/infrastructure/: auth_dependencies.py  jwt_utils.py
src/app/auth/service/: auth_service.py
src/app/config/: __init__.py  core.py  default_settings.py
src/app/farm_management/: __init__.py  container.py
src/app/farm_management/domain/: __init__.py  account_model.py  base.py  crop_cycle_model.py  crop_master_model.py  field_model.py  report_campaign_model.py
src/app/farm_management/infrastructure/: __init__.py  database_models.py
src/app/farm_management/service/: __init__.py  account_service.py  crop_cycle_service.py  crop_master_service.py  field_service.py  report_campaign_service.py
src/app/reports/: __init__.py  container.py
src/app/reports/config/: __init__.py
src/app/reports/domain/: __init__.py  base.py  models.py  report_model.py  repositories.py
src/app/reports/infrastructure/: __init__.py  database_models.py  sql_reports_repository.py
src/app/reports/service/: __init__.py  reports_service.py
src/app/storage/: container.py
src/app/storage/domain/: repositories.py
src/app/storage/infrastructure/: disk_file_repository.py
src/app/storage/service/: storage_service.py
src/app/users/: container.py
src/app/users/domain/: __init__.py  base.py  user_model.py  user_repository.py
src/app/users/domain/schemas/: __init__.py  (+1 more)
src/app/users/infrastructure/: sqlalchemy_user_repository.py
src/app/users/service/: exceptions.py  user_service.py
src/app/utils/: errors.py  image_utils.py  logger.py  validators.py
src/app/weather_data/: container.py
src/app/weather_data/domain/: entities.py  repositories.py
src/app/weather_data/infrastructure/: openweather_client.py  redis_repository.py  smn_client.py  sqlalchemy_repository.py  timeseries_repository.py
src/app/weather_data/migrations/: __init__.py  timescale_migration.py
src/app/weather_data/service/: current_weather_service.py  weather_batch_service.py  weather_service.py
src/app/weather_zones/: container.py
src/app/weather_zones/domain/: base.py  weather_zone.py  weather_zone_repository.py
src/app/weather_zones/infrastructure/: weather_zone_repository_impl.py
src/app/weather_zones/service/: zone_management.py
(+26 files in other folders)
