[tool.poetry]
name = "genai-crops-analyzer"
version = "0.1.0"
description = "GenAI-powered crops analyzer for detecting nutrient deficiencies and diseases"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
numpy = ">=1.26.0,<2.0.0"
pandas = "^2.0.3"
scikit-image = "^0.21.0"
pillow = "^10.0.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
transformers = "^4.32.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
opencv-python = "^4.8.0"
gunicorn = "^21.2.0"
dependency-injector = "^4.46.0"
ollama = "^0.4.8"
flask-cors = "^6.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^2.11.5"}
asyncpg = "^0.27.0"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
pyyaml = "^6.0.2"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-community = "^0.0.30"
asgiref = "^3.7.0"
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
redis = {extras = ["hiredis"], version = "^6.2.0"}
timescale = "^0.0.8"
s3fs = "^2025.5.1"
xarray = "^2025.4.0"
h5netcdf = "^1.6.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src:create_app" 